--- a/index.html
+++ b/index.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Huntsman Excavation and Land Clearing</title>
+<title>Beau Roundy</title>
 </head>
-<body>
-<h1>Huntsman Excavation and Land Clearing</h1>
-<br/>
-<h2>About us:</h2>
-<br/>
-  <p>
-    We incorporate the use of heavy equipment for small scale site preparation, vegetation/debris removal, and land management. 
-    We also deliver top soil, gravel, sand and other project material. 
-    Contact us with your project needs.
-  </p>
-<br/>
-<h2>Meet Brayden</h2>
-<br/>
-<p>
-  I provide an outstanding excavation and land clearing service. 
-  I also transport project material to and from a project. 
-  Serving clients in the Castle Country and surrounding areas; I work with homeowners and businesses who require professional services and superb results. 
-  If you are preparing for a project, my company will ensure your satisfaction in a timely and efficient manner.
-</p>
-<br/>
-<img src="Images/HuntsmanExcavation_Logo.jpg" alt="Huntsman Excavation and Land Clearing Logo" width="320" height="143"/>
+<body bgcolor="aqua">
+<h1>Hello World</h1>
+<p>My name is Beau Roundy. </p>
 </body>
 </html>
