--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 <title>Beau Roundy</title>
 </head>
-<body bgcolor="aqua">
+<body> <!-- bgcolor="aqua"> 
 <h1>Hello World</h1>
 <p>My name is Beau Roundy. </p>
+-->
+  <div>
+    <a href="current_resume.pdf"><a/>
+  </div>
 </body>
 </html>
