--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>My name is Beau Roundy. </p>
 -->
   <div>
-    <a href="current_resume.pdf"><a/>
+    <a href="Current_Resume.pdf"><a/>
   </div>
 </body>
 </html>
