--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <h1>Hello World</h1>
 <p>My name is Beau Roundy. </p>
 -->
-  <div>
-    <a href="Current_Resume.pdf"><a/>
+  <div>      
+      <iframe src="Current_Resume.pdf"></iframe>
   </div>
 </body>
 </html>
