--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>My name is Beau Roundy. </p>
 -->
   <div>      
-      <iframe src="Current_Resume.pdf"></iframe>
+      <iframe style="width: 100%; height: 55%" src="Current_Resume.pdf"></iframe>
   </div>
 </body>
 </html>
