--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>My name is Beau Roundy. </p>
 -->
       
-      <iframe style="width: 100%; height: 100%" src="Current_Resume.pdf"></iframe>
+      <iframe  height ="100%" width="100%" style="border:3px solid black;" src="Current_Resume.pdf"></iframe>
 
 </body>
 </html>
