--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p>My name is Beau Roundy. </p>
 -->
       
-      <iframe  height ="100%" width="100%" style="border:3px solid black;" src="Current_Resume.pdf"></iframe>
+      <iframe id="frame" height ="100%" width="100%" style="border:3px solid black;" src="Current_Resume.pdf"></iframe>
 
 </body>
 </html>
