--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <title>Beau Roundy</title>
       
-      <style> 
-                                             
+      <style>                                  
               #frame { 
-                  width: 600px; 
-                  height: 1000px; 
+                  margin: auto;
+                  width: 750px; 
+                  height: 900px; 
                   resize: both; 
               } 
            </style> 
